<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="@color/background">

    <EditText
        android:id="@+id/CCExpiryYear"
        android:layout_width="79dp"
        android:layout_height="50dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="444dp"
        android:ems="10"
        android:hint="Year"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CCExpiryMonth" />

    <Button
        android:id="@+id/testButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="362dp"
        android:text="Test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CVVCode"
        android:backgroundTint="@color/button"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/CCExpiryMonth"
        android:layout_width="79dp"
        android:layout_height="50dp"
        android:layout_marginStart="93dp"
        android:layout_marginBottom="444dp"
        android:ems="10"
        android:hint="Month"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/CCExpiryYear"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/validText"
        android:layout_width="132dp"
        android:layout_height="57dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="291dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testButton"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/CVVCode"
        android:layout_width="124dp"
        android:layout_height="56dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="217dp"
        android:layout_marginBottom="434dp"
        android:ems="10"
        android:hint="CVV Code"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CCExpiryMonth"
        app:layout_constraintVertical_bias="0.06" />

    <EditText
        android:id="@+id/CCNumber"
        android:layout_width="226dp"
        android:layout_height="57dp"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="CC Number"
        android:inputType="number"
        android:maxLength="16"
        app:layout_constraintBottom_toTopOf="@+id/CCExpiryYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/CCTypeText"
        android:layout_width="165dp"
        android:layout_height="73dp"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="140dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/CCNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>