<resources>
    <string name="app_name">Group16 - Quick Cash</string>
    <string name="button">login</string>
    <string name="button2">switch to employee</string>
    <string name="TextView2">password</string>
    <string name="Text">email</string>
    <string name="EMPTY_STRING" />
    <string name="FIREBASE_URL">https://group-16-62934-default-rtdb.firebaseio.com</string>
    <string name="search">search</string>
    <string name="FIELD_EMPTY_ERR">At least one field is empty</string>
    <string name="Return">return</string>
    <string name="FNAME_EMPTY_ERR">Please enter your first name</string>
    <string name="LNAME_EMPTY_ERR">Please enter your last name</string>
    <string name="CCNUM_EMPTY_ERR">Please enter your credit card number</string>
    <string name="EMAIL_EMPTY_ERR">Please enter your email address</string>
    <string name="PHONE_EMPTY_ERR">Please enter your phone number</string>
    <string name="USERNAME_EMPTY_ERR">Please enter a username</string>
    <string name="PSSWD_EMPTY_ERR">Please enter a password</string>
    <string name="CPSSWD_EMPTY_ERR">Please re-enter the password</string>

    <string name="CCNUM_INVALID_ERR">These card details don\'t look quite right</string>

    <string name="EMAIL_ILLEGAL_FORMAT_ERR">Please give a valid email, formatted like user@example.com</string>

    <string name="PHONE_ILLEGAL_FORMAT_ERR">Please enter only the 10-digits of your phone number</string>
    <string name="PHONE_NOT_CANADIAN_ERR">We can only accept Canadian phone numbers at this time</string>

    <string name="USERNAME_ILLEGAL_CHAR_ERR">Usernames may only contain letters A-z, numbers, and dashes</string>
    <string name="USERNAME_ILLEGAL_LENGTH_ERR">Usernames should be 6–30 characters long</string>
    <string name="USERNAME_TAKEN_ERR">This username is not available</string>

    <string name="PSSWD_ILLEGAL_FORMAT_ERR">Your password should be 6 characters or longer</string>
    <string name="CPSSWD_DIFFERENT_ERR">Passwords do not match</string>
    <string name="FIREBASE_DB_URL">https://group-16-62934-default-rtdb.firebaseio.com/</string>

    <string name="ACCOUNT_EXISTS_ERR">You already have an account, please login!</string>
    <string name="REGISTERED_MESSAGE">Registration successful!</string>
    <string name="REGISTRATION_FAILED_ERR">There was an error, please try again!</string>

    //Strings used for CCTemp Espresso test
    <string name ="CC_VISA">"CC number is VISA"</string>
    <string name ="CC_MASTER">"CC number is MasterCard"</string>
    <string name ="CC_AMEX">"CC number is AMEX"</string>
    <string name="PSSWD_NO_SPECIAL_CHAR_ERR">Your password must contain at least one special character</string>

    //SubmitJob
    <string name="SELECT_JOB_TYPE_PROMPT">Please select a job type.</string>
    <string-array name="JOB_TYPES">
        <item>Repairing a computer</item>
        <item>Mowing the lawn</item>
        <item>Walking a dog</item>
        <item>Babysitting</item>
        <item>Picking up a grocery</item>
    </string-array>

    <string name="JOB_URGENCY_1">Priority 1</string>
    <string name="JOB_URGENCY_2">Priority 2</string>
    <string name="JOB_URGENCY_3">Priority 3</string>

    <string name="JOB_EMPTY_FIELD_ERR">You must fill all fields</string>
    <string name="JOB_DATE_PASSED_ERR">Date must not be in the past</string>
    <string name="JOB_TOO_LONG_ERR">This app is intended for shorter tasks</string>
    <string name="JOB_STATUS_OK">OK</string>

</resources>